--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "test-recorrido",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
+    "bootstrap": "^5.1.1",
     "chart.js": "^3.5.1",
     "chartkick": "^4.0.5",
     "jquery": "^3.6.0",
